Fixed: Missing scrollbar at login page #1346

--- a/themes/HumHub/css/theme.less
+++ b/themes/HumHub/css/theme.less
@@ -205,7 +205,6 @@ input[type=select] {
   background-image: linear-gradient(to right, @primary 0%, lighten(@primary, 10%) 50%, lighten(@primary, 10%) 100%), linear-gradient(to right, lighten(@primary, 5%) 0%, lighten(@primary, 25%) 51%, lighten(@primary, 20%) 100%);
   background-size: 100% 100%;
   position: relative;
-  overflow: hidden;
   padding-top: 40px;
 
   .text {
